--- a/src/app/components/edit-recipe-modal/edit-recipe-modal.component.html
+++ b/src/app/components/edit-recipe-modal/edit-recipe-modal.component.html
@@ -2,28 +2,28 @@
   <div class="modal-window">
     <span class="close" (click)="onClose()">X</span>
     <div class="modal-content">
-      <h1>Edit</h1>
+      <h1>{{'EDIT' | translate}}</h1>
       <form [formGroup]="recipeForm">
         <ul class="info">
-          <li><span i18n="@@Name">Name</span> <br/>
-            <input formControlName="name" [value]="recipe.name" placeholder="Recipe Name">
+          <li><span >{{'NAME' | translate}}</span> <br/>
+            <input formControlName="name" [value]="recipe.name" [placeholder]="'HOLDER_NAME' | translate">
           </li>
-          <li><span i18n="@@Ingredients">Ingredients</span> <br/>
+          <li><span>{{'INGREDIENTS' | translate}}</span> <br/>
             <textarea formControlName="ingredients" [value]="recipe.ingredients" class="ingredients"
-                      placeholder="Ingredients that you need"></textarea>
+                      [placeholder]="'HOLDER_INGREDIENTS' | translate"></textarea>
           </li>
-          <li><span i18n="@@Time">Time for cooking</span> <br/>
-            <input formControlName="timeForCooking" [value]="recipe.timeForCooking" placeholder="In minutes">
+          <li><span>{{'TIME' | translate}}</span> <br/>
+            <input formControlName="timeForCooking" [value]="recipe.timeForCooking" [placeholder]="'HOLDER_TIME' | translate">
           </li>
-          <li><span i18n="Description">How to cook</span> <br/>
-            <textarea formControlName="description" [value]="recipe.description" rows="6"
-                      placeholder="describe details"></textarea>
+          <li><span>{{'DESCRIPTION' | translate}}</span> <br/>
+            <textarea formControlName="description" [value]="recipe.description" rows="6" [placeholder]="'HOLDER_NAME' | translate"></textarea>
           </li>
         </ul>
       </form>
       <div class="buttons">
-        <button i18n="@@Edit" (click)="editRecipe(recipe)" class="add_recipe">Edit</button>
-        <button i18n="@@Close" class="close_button" (click)="onClose()">Close</button>
+        <button (click)="getBack()" class="close_button">{{'BACK' | translate}}</button>
+        <button (click)="editRecipe(recipe)" class="add_recipe">{{'EDIT' | translate}}</button>
+        <button class="close_button" (click)="onClose()">{{'CLOSE' | translate}}</button>
       </div>
     </div>
   </div>
