--- a/src/app/components/edit-recipe-modal/edit-recipe-modal.component.scss
+++ b/src/app/components/edit-recipe-modal/edit-recipe-modal.component.scss
@@ -55,7 +55,9 @@ li {
 input {
   height: 30px
 }
-
+.fas {
+  margin-right: 5px;
+}
 span {
   font-size: 20px;
 }
@@ -70,7 +72,6 @@ span {
 .close_button {
   height: 50px;
   width: 100px;
-  margin-left: 15px;
   background-color: #E0E0E0;
   color: #222222;
 }
@@ -78,7 +79,7 @@ span {
 .buttons {
   margin-top: 30px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
 }
 
 textarea, input {
