--- a/src/app/components/popup/popup.component.css
+++ b/src/app/components/popup/popup.component.css
@@ -21,10 +21,14 @@
   background-color: rgba(0, 0, 0, 0.4)
 }
 
+h1 {
+  text-align: center;
+}
+
 .buttons {
-  margin-top: 30px;
+  margin-top: 45px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
 }
 
 .modal-content {
@@ -67,5 +71,17 @@
 
 li {
   margin-top: 20px;
-  font-size: 20px;
+  font-size: 22px;
+}
+
+.edit_recipe {
+  height: 50px;
+  width: 150px;
+  background-color: #AA3939;
+  color: #fff;
+}
+.recipe_info {
+  font-size: 18px;
+  margin-top: 15px;
+  margin-left: 20px;
 }
