implement feature that saves last used language in Local Storage, tiny style fixes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
 <div class="navbar">
   <h2 class="logo">Recipe Book</h2>
-    <span class="language" (click)="changeLanguage()">{{language}}</span>
+    <span class="language" (click)="changeLanguage()">{{language.toUpperCase()}}</span>
   </div>
