--- a/src/app/components/popup/popup.component.html
+++ b/src/app/components/popup/popup.component.html
@@ -24,7 +24,7 @@
       <div class="buttons">
         <button class="close_button" (click)="openEditRecipeModal(recipe)">{{'EDIT' | translate}}</button>
         <button class="close_button" (click)="hideRecipeInfo()">{{'CLOSE' | translate}}</button>
-        <button class="edit_recipe" (click)="deleteRecipe()">{{'DELETE' | translate}}</button>
+        <button class="delete_recipe" (click)="deleteRecipe()">{{'DELETE' | translate}}</button>
 
       </div>
     </div>
